

17/07/2008
----------
Startup support for PBP loading (shadow)
Fixed the FileLoading problem (shadow)
Fixed The Utility class. Strings display as the should now. (shadow)
Few adds to ElfHeader (nothing important ) (shadow)
Added Utility class for display the Hexs properly. Not fully working (shadow)
Added ElfHeaderInfo for displaying elf header(shadow)

16/07/2008
----------

Add a basic gui with fileloader. (shadow)
Elfheader seems to load okay . Time now for Section Header. (shadow)

15/07/2008
----------
First try of elf loader creation. Not working yet! (shadow)